tests/NormalTests/paczka1/small_fuzzy/39219726.err
Error in line 2: 7ye49S S536 58,4
Error in line 3: 7ye49S S883 27,8
Error in line 11: 7ye49S S722 46,6
